# rxtrack

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_person_table.rs  m20220101_000001_create_tables.rs  m20220101_000002_create_rxinfo_table.rs  m20230122_000001_generic_event.rs
model/: Cargo.toml
model/src/: fill_request.rs  ids.rs  implicit_fill_request.rs  lib.rs  operations.rs  rx.rs
model/src/entities/: events.rs  fill_request.rs  mod.rs  person.rs  prelude.rs  reminder_policy.rs  rx_info.rs
