# SPDX-FileCopyrightText: 2022, Ryan Pavlik <ryan@ryanpavlik.com>
# SPDX-License-Identifier: CC0-1.0
[package]
name = "rxtrack_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# diesel = { version = "2.0.0", features = ["postgres"] }
# dotenvy = "0.15"
