# SPDX-FileCopyrightText: 2022, Ryan Pavlik <ryan@ryanpavlik.com>
# SPDX-License-Identifier: CC0-1.0
[package]
edition = "2021"
name = "rxtrack_model"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# diesel = { version = "2.0.0", features = ["postgres"] }
# dotenvy = "0.15"
sea-orm = {version = "0.10", features = ["sqlx-sqlite", "runtime-async-std-native-tls", "macros"]}
thiserror = "1.0"
